oxiplate-derive/tests/broken/writ/closed-like-comment-whitespace-remove.stderr
error: Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/writ/closed-like-comment-whitespace-remove.rs:4:27
  |
4 | #[oxiplate_inline("{{ foo -#}")]
  |                           ^^^
